--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,12 @@
     },
     "nx-poc-e2e": {
       "tags": []
+    },
+    "lib-a": {
+      "tags": []
+    },
+    "lib-b": {
+      "tags": []
     }
   }
 }
