--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "jest-preset-angular": "7.0.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
     "@nrwl/builders": "7.8.6",
     "jest": "24.1.0",
     "@types/jest": "24.0.9",
@@ -55,7 +56,10 @@
     "@nrwl/schematics": "7.8.6",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
+    "ng-packagr": "^4.2.0",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "3.2.2",
     "prettier": "1.16.4"
